# frjulie8.github.io

./: .gitignore  .nojekyll  404.html  A02-frjulie8.html  A02-frjulie8.ipynb  A05-frjulie8.docx  A05-frjulie8.html  A05-frjulie8.ipynb  _quarto.yml  about.html  about.qmd  education.html  education.qmd  index.html  index.qmd  pyproject.toml  requirements.txt  search.json  sitemap.xml  styles.css
.github/workflows/: quarto-publish.yml
A02-frjulie8_files/libs/bootstrap/: bootstrap-fd96232d7d733780007c6c25bcda7834.min.css
Assignment 01/: bufrjulie8_system_info.docx  bufrjulie8_system_info.html  bufrjulie8_system_info.qmd
Assignment01/: bufrjulie8_system_info.html
Module3Lab1/: spark_analysis.html  spark_analysis.qmd
Module4Lab1/: data  lab06_frjulie8.docx  lab06_frjulie8.html
_site/: A02-frjulie8.html  about.html  index.html  robots.txt  search.json
_site/Assignment 01/: bufrjulie8_system_info.docx  bufrjulie8_system_info.html
_site/Module3Lab1/: spark_analysis.html
_site/Module4Lab1/: lab06_frjulie8.docx
julies/: A02-frjulie8.qmd  _quarto.yml  about.html  index.html  index.qmd
julies/_site/: index.html  sitemap.xml
projects/: minecraft-auto-close.html  minecraft-auto-close.qmd
site_libs/bootstrap/: bootstrap-2e886e4b60b9eb29f0a2f5c2180e08f5.min.css  bootstrap-c8dd7e0a4d9264d29185335a2a627af3.min.css
